src/test/deca/codegen/interactive/invalid/06readIntFloat.deca
// Description:
//  readInt avec un float 
//
// Resultats:
//  06readIntFloat.expected
// 
// Historique:
//    cree le 10/06/2022

{
    int x = readInt();
}